--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,15 +5,20 @@ body {
   color: #282828;
 }
 
+.buttons{
+  display: flex;
+}
+
 .button {
-  margin: 30px;
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
   background-color: #39495c;
   border-radius: 5px;
-  font-size: 18px;
+  font-size: 16px;
   width: 160px;
   height: 60px;
   color: white;
-  padding: 20px;
   box-shadow: inset 0 -0.6em 1em -0.35em rgba(0, 0, 0, 0.17),
     inset 0 0.6em 2em -0.3em rgba(255, 255, 255, 0.15),
     inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
@@ -38,6 +43,7 @@ body {
   margin-top: 8px;
   border: 2px solid #d8d8d8;
   border-radius: 50%;
+  display: inline-flex;
 }
 
 
